Fixed text position on mobile

--- a/src/ImageSection/ImageSection.scss
+++ b/src/ImageSection/ImageSection.scss
@@ -199,7 +199,7 @@
           padding-left: 80px;
 
           @media only screen and (max-width: $break-large) {
-            margin: 0;
+            padding: 0;
           }
         }
     }
@@ -211,7 +211,7 @@
         padding-right: 80px;
 
         @media only screen and (max-width: $break-large) {
-          margin: 0;
+          padding: 0;
         }
       }
     }
